# Experiment-automatisering

./: Arduino_write_data_csv.py  DiodeExperiment.py  DiodeExperiment:.py  EA_script1.py  ElectronicLoadMeasurement.py  README.md  arduino_device.py  pyvisa_basic.py  test.csv  test_arduino.ipynb
Arduino/: Arduino_write_data_csv.py  DiodeExperiment.py  Run_model.py  arduino_device.py
H2H3/: Arduino_device.py  Arduino_write_data_csv.py  DiodeExperiment.py  Particles.py  Pyvisa_basic.py  test_arduino.ipynb
Square/: square.py
data/: LED_curve_mblauwe_led.csv  LED_curve_mblauwe_led_0.csv  LED_curve_mblauwe_led_1.csv  LED_curve_mblauwe_led_2.csv  LED_curve_mblauwe_led_3.csv  LED_curve_mblauwe_led_4.csv  LED_curve_mrode_led.csv  LED_test_0.csv  LED_test_1.csv  LED_test_10.csv  LED_test_11.csv  LED_test_12.csv  LED_test_13.csv  LED_test_14.csv  LED_test_15.csv  LED_test_2.csv  LED_test_3.csv  LED_test_4.csv  LED_test_5.csv  LED_test_6.csv  LED_test_7.csv  LED_test_8.csv  LED_test_9.csv
data/2022-11-17/: measurement_0.csv  measurement_1.csv  measurement_2.csv
easystat/: pyproject.toml
easystat/src/easystat/: shortcuts.py
error_week/: Error_DD1.py  Error_DD2.py  Error_DD3.py  GreeterBot.py  greet.py
oefen/: LED.py  Pyvisa_basic.py  csv_writer.py
oefen/H1-4/: Breathing_Light.py  arduino_write_csv.py
oefen/H5/easystat/tests/: test_shortcuts.py
oefen/H6/: cli.py  hello.py
oefen/H6/Pr-erroranalysis/: pyproject.toml
oefen/H6/smallangle/: pyproject.toml
oefen/H7/: designer_gui.py  error.py  example-gui.py  functionPlotter.py  threads.py  ui_simple_app.py  ui_simple_app_designer.py
pythondaq/: ElectronicLoadMeasurement.py  arduino_device.py  pyproject.toml  simple_app_scan.ui  view.py
pythondaq/data/: measurement_0.csv
pythondaq/src/pythondaq/: DiodeExperiment.py  arduino_device.py  view.py
pythondaq/src/pythondaq/controller/: arduino_device.py
pythondaq/src/pythondaq/model/: DiodeExperiment.py  PV.py
pythondaq/src/pythondaq/view/: Design_22Nov.py  Design_27Nov.py  Design_27Nov.ui  Design_28Nov.py  Design_28Nov.ui  cli.py  diode_experiment.py  gui.py  gui_pv.py  test.py  view.py
pythondaq/tests/: cli.py  test_imports.py
pythondaq_gui/: pyproject.toml  scan_designv22Nov.ui
pythondaq_gui/src/pythondaq/controller/: arduino_device.py
pythondaq_gui/tests/: test_imports.py
src/pythondaq/: DiodeExperiment.py  view.py
(+8 files in other folders)
