[tool.poetry]
name = "easystat"
version = "0.1.0"
description = ""
authors = ["JBusink <94122040+JBusink@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "easystat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
