[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["JBusink <94122040+JBusink@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyvisa = "^1.12.0"
pyvisa-py = "^0.5.3"
pyserial = "^3.5"
numpy = "^1.23.4"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
view = "pythondaq.view.view:main"
histogram = "pythondaq.view.view:histogram"
ID = "pythondaq.view.view:identification"
cli = "pythondaq.view.cli:cmd_group"