[tool.poetry]
name = "pythondaq"
version = "0.1.0"
description = ""
authors = ["JBusink <94122040+JBusink@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "^8.1.3"
pyvisa-py = "^0.5.3"
pyserial = "^3.5"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
pyvisa = "^1.12.0"
rich = "^12.6.0"
scipy = "^1.9.3"
pyside6 = "^6.4.1"
pyqtgraph = "^0.13.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "pythondaq.view.cli:cmd_group"

[tool.poe.tasks.compile]
shell = """pyside6-uic src/pythondaq/view/Design_27Nov.ui -o src/pythondaq/view/Design_27Nov.py ,→
"""